--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "element-ui": "^1.2.4",
-    "es6-promise": "^4.1.0",
+    "antd": "^2.9.1",
     "vue": "^2.1.6",
-    "vue-router": "^2.3.0",
-    "vuex": "^2.0.0",
-    "whatwg-fetch": "^2.0.3"
+    "vue-router": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
